--- a/app/common/dynamic-form/dynamic-form.component.html
+++ b/app/common/dynamic-form/dynamic-form.component.html
@@ -4,8 +4,9 @@
     <df-item *ngIf="item.controlType !== 'button'" [item]="item" [form]="form"></df-item>
     <df-button *ngIf="item.controlType === 'button'" [item]="item" [form]="form"></df-button>
   </div>
-
+  <p>Form valid:<br>{{form.valid}}</p>
 </form>
+
 
 <div *ngIf="payLoad" class="form-row">
   <strong>Saved the following values</strong><br>{{payLoad}}
