--- a/app/common/dynamic-form/item/item.component.html
+++ b/app/common/dynamic-form/item/item.component.html
@@ -1,5 +1,5 @@
 <div [attr.class]="getWrapperClass()" [formGroup]="form">
-  <label [attr.for]="item.key"  *ngIf="isLabelVisible()">
+  <label [attr.for]="item.key" [attr.class]="'form-control-label'"  *ngIf="isLabelVisible()">
     {{item.label}}
   </label>
 
@@ -17,12 +17,12 @@
 
   <div *ngIf="isControlTypeVisible('radio')">
     <div class="form-check" *ngFor="let option of item.options">
-      <label class="form-check-label">
+      <label [attr.class]="getLabelClass()">
         <input [type]="item.type"
                [id]="item.key + '--' + option.key"
                [formControlName]="item.key"
                [attr.class]="getControlClass()"
-               [checked]="idx === 0"
+               [checked]="item.formState"
                [value]="option.key">
       </label>
     </div>
@@ -69,6 +69,8 @@
     [attr.aria-describedby]="item.key+'Help'"
     [attr.placeholder]="item.placeholder">
   </textarea>
+
+  <div class="form-control-feedback">{{form.controls[item.key]['errors'] | json }}</div>
 
   <small [attr.id]="item.key+'Help'" class="form-text text-muted">{{item.helpText}}</small>
 
