--- a/app/common/dynamic-form/dynamic-form.component.html
+++ b/app/common/dynamic-form/dynamic-form.component.html
@@ -1,9 +1,11 @@
 <form (ngSubmit)="onSubmit($event)" [formGroup]="form">
 
   <div *ngFor="let item of items" class="form-row">
-    <!----><df-form-group *ngIf="item.controlType === 'formGroup'" ></df-form-group>
-    <df-item *ngIf="item.controlType !== 'button'" [item]="item" [form]="form"></df-item>
+    <df-form-group *ngIf="item.controlType === 'formGroup'" [formGroupConfig]="item" [form]="form"></df-form-group>
+
+    <df-item *ngIf="item.controlType !== 'button' && item.controlType !== 'formGroup'" [item]="item" [form]="form"></df-item>
     <df-button *ngIf="item.controlType === 'button'" [item]="item" [form]="form"></df-button>
+    <!-- -->
   </div>
   <p>Form valid:<br>{{form.valid}}</p>
 </form>
