--- a/app/component/start/start.component.html
+++ b/app/component/start/start.component.html
@@ -25,6 +25,7 @@
     -->
 
     <p>Items</p>
+    <pre style="height:200px; overflow-y: scroll;">{{dynamicItems | json}}</pre>
     <dynamic-form
     [items]="dynamicItems"
     [model]="{}">
