feat(basics): progress reactive

--- a/app/common/dynamic-form/item/item-formGroup.component.html
+++ b/app/common/dynamic-form/item/item-formGroup.component.html
@@ -2,8 +2,11 @@
   <legend>{{formGroupConfig.title}}</legend>
 
   <div *ngFor="let item of formGroupConfig.items">
-    <df-item *ngIf="item.controlType !== 'button'&& item.controlType !== 'formGroup'" [item]="item" [form]="form"></df-item>
+    item:{{item}}
+    <!--<df-item *ngIf="item.controlType !== 'button'&& item.controlType !== 'formGroup'" [item]="item" [form]="form"></df-item>-->
     <df-button *ngIf="item.controlType === 'button'" [item]="item" [form]="form"></df-button>
   </div>
+
+
 
 </fieldset>
