--- a/app/component/start/start.component.html
+++ b/app/component/start/start.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1 class="display-3">Dough-Fabric</h1>
-  <p class="lead">Generic API based form builder form donut.io</p>
+  <p class="lead">Generic Form Form Builder</p>
   <template-form-comp (onModelChange)="onTemplateFromModelChange($event)">
   </template-form-comp>
 </div>
