fix(error comp): edit

--- a/app/common/dynamic-form/errors/errors.component.html
+++ b/app/common/dynamic-form/errors/errors.component.html
@@ -1,3 +1,5 @@
-<span *ngIf="showErrorFlag" class="help-block">
-  <ng-content></ng-content>
-</span>
+<div [attr.class]="getClassNames()">
+  <div class="error-message"*ngFor="let key of errorKeys()">
+    {{errors[key]}}
+  </div>
+</div>
