--- a/app/common/dynamic-form/item/control/item.component.html
+++ b/app/common/dynamic-form/item/control/item.component.html
@@ -14,13 +14,14 @@
 
   <div *ngIf="isControlTypeVisible('radio')">
     <div class="form-check" *ngFor="let option of item.options">
-      <label [attr.class]="getLabelClass()">
+      <label [attr.class]="">
         <input [type]="item.type"
                [id]="item.key + '--' + option.key"
                [formControlName]="item.key"
                [attr.class]="getControlClass()"
                [checked]="item.formState"
                [value]="option.key">
+        {{option.value}}
       </label>
     </div>
   </div>
