--- a/app/common/dynamic-form/item/formGroup/item-formGroup.component.html
+++ b/app/common/dynamic-form/item/formGroup/item-formGroup.component.html
@@ -2,7 +2,8 @@
   <legend>{{formGroupConfig.title}}</legend>
 
   <div *ngFor="let item of formGroupConfig.items">
-    item:{{item}}
+
+    <df-form-group [formGroupConfig]="item" [form]="form"></df-form-group>
     <df-item *ngIf="item.controlType !== 'button'&& item.controlType !== 'formGroup'" [item]="item" [form]="form"></df-item>
 
     <df-button *ngIf="item.controlType === 'button'" [item]="item" [form]="form"></df-button>
