--- a/app/common/dynamic-form/item/control/item.component.html
+++ b/app/common/dynamic-form/item/control/item.component.html
@@ -14,7 +14,7 @@
 
   <div *ngIf="isControlTypeVisible('radio')">
     <div class="form-check" *ngFor="let option of item.options">
-      <label [attr.class]="">
+      <label [attr.class]="'form-check-label'">
         <input [type]="item.type"
                [id]="item.key + '--' + option.key"
                [formControlName]="item.key"
