--- a/app/common/dynamic-form/dynamic-form.component.html
+++ b/app/common/dynamic-form/dynamic-form.component.html
@@ -2,7 +2,8 @@
 
   <div *ngFor="let item of items" class="form-row">
 
-    <dynamic-comp [componentType]="dynComp"></dynamic-comp>
+    <!-- [formGroupConfig]="item" [form]="form" -->
+    <dynamic-comp [componentType]="dynComp" [componentData]="dynCompData"></dynamic-comp>
 
     <df-form-group *ngIf="item.controlType === 'formGroup'" [formGroupConfig]="item" [form]="form"></df-form-group>
 
