fix(error component): fixed error component

--- a/app/common/dynamic-form/errors/errors.component.html
+++ b/app/common/dynamic-form/errors/errors.component.html
@@ -1,5 +1,5 @@
 <div [attr.class]="getClassNames()">
   <div class="error-message"*ngFor="let key of errorKeys()">
-    {{errors[key]}}
+    {{errorMessages[key]}}
   </div>
 </div>
