--- a/app/common/dynamic-form/dynamic-form.component.html
+++ b/app/common/dynamic-form/dynamic-form.component.html
@@ -1,21 +1,19 @@
-<form (ngSubmit)="onSubmit($event)" [formGroup]="form">
-
+<div [formGroup]="form">
   <div *ngFor="let item of items" class="form-row">
-
+    
     <!-- [formGroupConfig]="item" [form]="form" -->
     <dynamic-comp [componentType]="dynComp" [componentData]="dynCompData"></dynamic-comp>
 
     <df-form-group *ngIf="item.controlType === 'formGroup'" [formGroupConfig]="item" [form]="form"></df-form-group>
 
-    <df-item *ngIf="item.controlType !== 'button' && item.controlType !== 'formGroup'" [item]="item" [form]="form"></df-item>
+    <df-item *ngIf="item.controlType !== 'button' && item.controlType !== 'formGroup'" [item]="item"
+             [form]="form"></df-item>
 
     <df-button *ngIf="item.controlType === 'button'" [item]="item" [form]="form"></df-button>
     <!--  -->
   </div>
   <p>Form valid:<br>{{form.valid}}</p>
-</form>
-
-
+</div>
 <div *ngIf="payLoad" class="form-row">
   <strong>Saved the following values</strong><br>{{payLoad}}
 </div>
