--- a/app/component/start/start.component.html
+++ b/app/component/start/start.component.html
@@ -44,19 +44,22 @@
     <p>Config from Server</p>
     <pre style="height:200px; overflow-y: scroll;">{{dynamicItems | json}}</pre>
     <h4>Campaign on Client (app): {{formName}}</h4>
+    <form (ngSubmit)="onSubmit($event)" [formGroup]="form">
     <dynamic-form
       [items]="dynamicItems"
       [model]="{}">
     </dynamic-form>
+      </form>
 
   </div>
 
   <div class="col-lg-6">
     <h4>FormBuilder from Customer: {{formName}}</h4>
+
     <dynamic-form
       [items]="formItems"
       [model]="formModel"
       (onSubmitted)="onSubmitted($event)">
     </dynamic-form>
-  </div>
+    </div>
 </div>
