--- a/app/common/dynamic-form/item/formGroup/item-formGroup.component.html
+++ b/app/common/dynamic-form/item/formGroup/item-formGroup.component.html
@@ -1,12 +1,12 @@
 <fieldset [attr.class]="getFormGroupClass()">
-  <legend>{{formGroupConfig.title}}</legend>
+  <legend>{{config.title}}</legend>
 
-  <div *ngFor="let item of formGroupConfig.items">
+  <div *ngFor="let config of config.items">
 
-    <df-form-group [formGroupConfig]="item" [form]="form"></df-form-group>
-    <df-item *ngIf="item.controlType !== 'button'&& item.controlType !== 'formGroup'" [item]="item" [form]="form"></df-item>
+    <df-form-group [config]="config" [form]="form"></df-form-group>
+    <df-item *ngIf="config.controlType !== 'button'&& config.controlType !== 'formGroup'" [config]="config" [form]="form"></df-item>
 
-    <df-button *ngIf="item.controlType === 'button'" [item]="item" [form]="form"></df-button>
+    <df-button *ngIf="config.controlType === 'button'" [config]="config" [form]="form"></df-button>
     <!-- -->
   </div>
   <ng-content></ng-content>
