--- a/app/common/dynamic-form/item/control/control.component.html
+++ b/app/common/dynamic-form/item/control/control.component.html
@@ -45,7 +45,7 @@
     [attr.class]="getControlClass()"
     [attr.aria-describedby]="config.key+'Help'"
     [attr.placeholder]="config.placeholder">
-    <template ngFor let-opt [ngForOf]="config.options">
+    <template ngFor let-opt [ngForOf]="config.visibleOptions">
       <optgroup *ngIf="opt.children" label="{{opt.value}}">
         <option *ngFor="let optChild of opt.children" [ngValue]="optChild.key" (click)="select(optChild.key)">
           {{optChild.value}}
