fix(refactoring): models

--- a/app/common/dynamic-form/dynamic-form.component.html
+++ b/app/common/dynamic-form/dynamic-form.component.html
@@ -1,12 +1,12 @@
 <div [formGroup]="form">
 
-  <div *ngFor="let config of items" class="form-row">
+  <div *ngFor="let conf of config" class="form-row">
 
-    <df-form-group *ngIf="config.controlType === 'formGroup'" [config]="config" [form]="form"></df-form-group>
+    <df-form-group *ngIf="conf.controlType === 'formGroup'" [config]="conf" [form]="form"></df-form-group>
 
-    <df-item *ngIf="config.controlType !== 'button' && config.controlType !== 'formGroup'" [config]="config" [form]="form"></df-item>
+    <df-item *ngIf="conf.controlType !== 'button' && conf.controlType !== 'formGroup'" [config]="conf" [form]="form"></df-item>
 
-    <df-button *ngIf="config.controlType === 'button'" [config]="config" [form]="form"></df-button>
+    <df-button *ngIf="conf.controlType === 'button'" [config]="conf" [form]="form"></df-button>
 
   </div>
 
