--- a/app/common/dynamic-form/item/formGroup/item-formGroup.component.html
+++ b/app/common/dynamic-form/item/formGroup/item-formGroup.component.html
@@ -1,13 +1,13 @@
 <fieldset [attr.class]="getFormGroupClass()">
-  <legend>{{config.title}}</legend>
+  <legend>{{config.label}}</legend>
 
-  <div *ngFor="let config of config.config">
+  <div *ngFor="let conf of config.config">
+    <!--
+    <df-form-group *ngIf="conf.controlType === 'formGroup'" [config]="conf" [form]="form"></df-form-group>
+ -->
+    <df-item *ngIf="conf.controlType !== 'button' && conf.controlType !== 'formGroup'" [config]="conf" [form]="form"></df-item>
 
-    <df-form-group [config]="config" [form]="form"></df-form-group>
-    <df-item *ngIf="config.controlType !== 'button'&& config.controlType !== 'formGroup'" [config]="config" [form]="form"></df-item>
-
-    <df-button *ngIf="config.controlType === 'button'" [config]="config" [form]="form"></df-button>
-    <!-- -->
+    <df-button *ngIf="conf.controlType === 'button'" [config]="conf" [form]="form"></df-button>
   </div>
-  <ng-content></ng-content>
+
 </fieldset>
