fix(refactoring): renaming

--- a/app/common/dynamic-form/components/control/control.component.html
+++ b/app/common/dynamic-form/components/control/control.component.html
@@ -1,4 +1,4 @@
-<div [attr.class]="getWrapperClass()" [formGroup]="form" *ngIf="controlRendered">
+<div [attr.class]="getWrapperClass()" [formGroup]="group" *ngIf="controlRendered">
 
   <label [attr.for]="config.key" [attr.class]="'form-control-label'" *ngIf="isLabelVisible()">
     {{config.label}}
@@ -82,7 +82,7 @@
     [attr.placeholder]="config.placeholder">
    </textarea>
 
-  <item-errors [item]="config" [form]="form"></item-errors>
+  <item-errors [item]="config" [group]="group"></item-errors>
 
   <small [attr.id]="config.key+'Help'" class="form-text text-muted">{{config.helpText}}</small>
 </div>
