fix(nested forms): wip

--- a/app/common/dynamic-form/containers/dynamic-form.component.html
+++ b/app/common/dynamic-form/containers/dynamic-form.component.html
@@ -1,10 +1,7 @@
-<div [formGroup]="group">
-
-  <ng-container
-    *ngFor="let conf of config;"
-    dynamicItem
-    [config]="conf"
-    [group]="group">
-  </ng-container>
-
-</div>
+<ng-container
+  [formGroup]="group"
+  *ngFor="let conf of config;"
+  dynamicItem
+  [config]="conf"
+  [group]="group">
+</ng-container>
