--- a/app/common/ui-basic/control/control.component.html
+++ b/app/common/ui-basic/control/control.component.html
@@ -81,9 +81,9 @@
     [attr.aria-describedby]="config.key+'Help'"
     [attr.placeholder]="config.placeholder">
    </textarea>
-
-  <item-errors [item]="config" [group]="group"></item-errors>
-
+<!--
+  <item-errors [config]="config" [group]="group"></item-errors>
+-->
   <small [attr.id]="config.key+'Help'" class="form-text text-muted">{{config.helpText}}</small>
 
 </div>
